adds some styling

--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="About">
+      <h1>
+        Some
+      </h1>
+      <h1>
+        Stuff here
+      </h1>
+    </div>
+  </body>
 </html>
